polynomials roots recipricol conjugate, convolution

--- a/common/convolution.tex
+++ b/common/convolution.tex
@@ -17,8 +17,9 @@
   }
 \label{def:conv}
 %--------------------------------------
+Let $\spLLRBu$ be the space of all \structe{Lebesgue square-integrable functions}.
 \defbox{\indxs{\conv}\begin{array}{M}
-  The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
+  The \opd{convolution} operation $\conv$ is defined as
   \\\indentx$\ds
     \brs{\ff\conv\fg}(x)
     \eqd \ff(x)\conv \fg(x)
@@ -38,11 +39,50 @@
   }
 \label{thm:conv_algebra}
 %--------------------------------------
-\thmbox{\begin{array}{>{\ds}rc>{\ds}lCD}
-    \ff\conv\fg &=& \fg\conv\ff & (\prope{commutative})
-  \\\ff\conv\brp{\fg\conv\fh} &=& \brp{\fg\conv\fg}\conv\fh & & (\prope{associateve})
-  \\\brp{\alpha\ff}\conv\fg   &=& \alpha\brp{\ff\conv\fg} = \ff\conv\brp{\alpha\fg} & \forall \alpha\in\C
-  \\\ff\conv\brp{\fg+\fh} &=& \brp{\ff\conv\fg}+\brp{\ff\conv\fh}                   &                      & (\prope{distributive})
+Let $\conv$ be the \ope{convolution} operatation \xref{def:conv}.
+Let $\spLLRBu$ be the space of all \structe{Lebesgue square-integrable functions}.
+\thmbox{\begin{array}{>{\ds}rc>{\ds}l CD}
+    \ff\conv\fg               &=& \fg\conv\ff                                       & \forall \ff,\fg\in\spLLRBu               & (\prope{commutative})
+  \\\ff\conv\brp{\fg\conv\fh} &=& \brp{\ff\conv\fg}\conv\fh                         & \forall \ff,\fg\fh\in\spLLRBu            & (\prope{associateve})
+  \\\brp{\alpha\ff}\conv\fg   &=& \alpha\brp{\ff\conv\fg} = \ff\conv\brp{\alpha\fg} & \forall \ff,\fg\in\spLLRBu,\,\alpha\in\C &
+  \\\ff\conv\brp{\fg+\fh}     &=& \brp{\ff\conv\fg} + \brp{\ff\conv\fh}             & \forall \ff,\fg,\fh\in\spLLRBu           & (\prope{distributive})
 \end{array}}
 \end{theorem}
+\begin{proof}
+\begin{align*}
+  \ff\conv\fg
+    &\eqd \int_{u=-\infty}^{u=\infty} \ff(u)\fg(x-u) \du
+    && \text{by definition of $\conv$}
+    && \text{\xref{def:conv}}
+  \\&\eqd \int_{x-v=-\infty}^{x-v=\infty} \ff(x-v)\fg(v) (-1)\dv
+    && \text{where $v\eqd x-u$}
+    && \text{$\implies$ $u=x-v$, $\du=-\dv$}
+  \\&= -\int_{-v=-\infty}^{-v=\infty} \ff(x-v)\fg(v) \dv
+  \\&= -\int_{v=\infty}^{v=-\infty} \ff(x-v)\fg(v) \dv
+  \\&= \int^{v=\infty}_{v=-\infty} \fg(v)\ff(x-v) \dv
+  \\&\eqd \fg\conv\ff
+    && \text{by definition of $\conv$}
+    && \text{\xref{def:conv}}
+  %\\
+  %\\
+  %\ff\conv\brp{\fg\conv\fh}
+  %  &\eqd \ff\conv\int_{u\in\R} \fg(u)\fh(x-u) \du
+  %  && \text{by definition of $\conv$}
+  %  && \text{\xref{def:conv}}
+  %\\&\eqd \int_{v\in\R} \ff(v)\int_{u\in\R} \fg(u)\fh(x-v-u) \du\dv
+  %  && \text{by definition of $\conv$}
+  %  && \text{\xref{def:conv}}
+  %\\
+  %\\&= \int_{v\in\R} \ff(v)\int_{u\in\R} \fg(x-w)\fh(w-v) \du\dv
+  %  && \text{where $w\eqd x-u$}
+  %  && \text{$\implies$ $u=x-w$}
+  %\\
+  %\\&= \int_{v\in\R} \ff(v)\int_{u\in\R} \fg(x-w)\fh(w-v) \du\dv
+  %  && \text{where $w\eqd x-u$}
+  %  && \text{$\implies$ $u=x-w$}
+  %\\&\eqd \brp{\ff\conv\fg}\conv\fh
+  %  && \text{by definition of $\conv$}
+  %  && \text{\xref{def:conv}}
+\end{align*}
+\end{proof}
 
