--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -33,8 +33,7 @@ its notations, especially when they are necessary and happily imagined, are the 
   }
 \label{def:opLT}
 %--------------------------------------
-Let $\spLLRBu$ be the space of all
-\structe{Lebesgue square-integrable functions}.\\
+Let $\spLLRBu$ be the space of all \structe{Lebesgue square-integrable functions}.
 \defboxt{
   The \opd{Laplace Transform} operator $\opLT$ is here defined as
   \\\indentx$\ds
