--- a/common/math/graphics/unitcircle_roots1.tex
+++ b/common/math/graphics/unitcircle_roots1.tex
@@ -28,7 +28,7 @@
   %-------------------------------------
   % zeroes
   %-------------------------------------
-  \uput{1}[180](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[180](0,0){\pscircle[linecolor=red](0,0){1mm}}%
   %-------------------------------------
   % Axis ticks
   %-------------------------------------
