--- a/common/math/graphics/unitcircle_roots3.tex
+++ b/common/math/graphics/unitcircle_roots3.tex
@@ -28,9 +28,9 @@
   %-------------------------------------
   % zeroes
   %-------------------------------------
-  \uput{1}[  60](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ 180](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ -60](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[  60](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ 180](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ -60](0,0){\pscircle[linecolor=red](0,0){1mm}}%
   %-------------------------------------
   % Axis ticks
   %-------------------------------------
