--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -947,14 +947,15 @@ Let $\fp(x)=\sum_{n=0}^\xN \alpha_n x^n$ be a polynomial over a field $\fieldF$.
 
 \begin{figure}%
   \centering
-  \begin{tabular}{|c|c|c|c|}
+  \begin{tabular}{|c|c|c|c|c|}
     \hline
      \includegraphics{../common/math/graphics/pdfs/unitcircle_roots1.pdf}
     &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots2.pdf}
     &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots3.pdf}
     &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots4.pdf}
+    &\includegraphics{../common/math/graphics/pdfs/unitcircle_roots5.pdf}
     \\
-    $x+1=0$ & $x^2+1=0$ & $x^3+1=0$ & $x^4+1=0$
+    $x+1=0$ & $x^2+1=0$ & $x^3+1=0$ & $x^4+1=0$ & $x^5+1=0$
     \\\hline
   \end{tabular}
   \caption{
@@ -1053,31 +1054,9 @@ Let $N\in\Zp$, $I=\set{n\in\Z}{-N\le n\le N}$ and
 \end{proof}
 
 \begin{figure}
-\begin{center}
-\scriptsize
-\setlength{\unitlength}{0.15mm}
-\begin{picture}(300,300)(-130,-130)
-  \thicklines
-  \color{axis}%
-    \put(-130,   0){\line(1,0){260} }%
-    \put(   0,-130){\line(0,1){260} }%
-    \put( 140,   0){\makebox(0,0)[l]{$\Real(x)$}}%
-    \put(   0, 140){\makebox(0,0)[b]{$\Imag(x)$}}%
-    \qbezier[30](0,0)(62.5,-62.5)(125,-125)%
-  \color{circle}%
-    \input{../common/circle.inp}%
-    \put( 120, 120){\makebox(0,0)[lb]{$x=e^{i\theta}$}}%
-    \put( 115, 115){\vector(-1,-1){43}}%
-  \color{zero}%
-    \put(  56, -56){\circle{10}}%
-    \put( 125,-125){\circle{10}}%
-  \normalcolor
-    \put(  56, -56){\makebox(0,0)[br]{$re^{i\phi}$}}%
-    \put( 130,-125){\makebox(0,0)[bl]{$\frac{1}{r}e^{i\phi}$}}%
-    \put(  25, - 2){\makebox(0,0)[tl]{$\phi$}}%
-\end{picture}%
-\end{center}
-\caption{Recipricol conjugate zero pairs}
+  \centering
+  \includegraphics{../common/math/graphics/pdfs/unitcircle_RecipricolConjugate.pdf}
+  \caption{Recipricol conjugate pairs}
 \end{figure}
 
 %---------------------------------------
