--- a/common/math/graphics/unitcircle_roots2.tex
+++ b/common/math/graphics/unitcircle_roots2.tex
@@ -28,8 +28,8 @@
   %-------------------------------------
   % zeroes
   %-------------------------------------
-  \uput{1}[  90](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ -90](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[  90](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ -90](0,0){\pscircle[linecolor=red](0,0){1mm}}%
   %-------------------------------------
   % Axis ticks
   %-------------------------------------
