--- a/common/math/graphics/unitcircle_roots4.tex
+++ b/common/math/graphics/unitcircle_roots4.tex
@@ -27,10 +27,10 @@
   %-------------------------------------
   % zeroes
   %-------------------------------------
-  \uput{1}[  45](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ 135](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[-135](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ -45](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[  45](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ 135](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[-135](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ -45](0,0){\pscircle[linecolor=red](0,0){1mm}}%
   %-------------------------------------
   % Axis ticks
   %-------------------------------------
