--- a/common/math/graphics/unitcircle_roots5.tex
+++ b/common/math/graphics/unitcircle_roots5.tex
@@ -27,11 +27,11 @@
   %-------------------------------------
   % zeroes
   %-------------------------------------
-  \uput{1}[  36](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ 108](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ 180](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[-108](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
-  \uput{1}[ -36](0,0){\color{red}\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[  36](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ 108](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ 180](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[-108](0,0){\pscircle[linecolor=red](0,0){1mm}}%
+  \uput{1}[ -36](0,0){\pscircle[linecolor=red](0,0){1mm}}%
   %-------------------------------------
   % Axis ticks
   %-------------------------------------
