primitive polynomial reference

--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -320,20 +320,20 @@ Rings of polynomials have a similar elements called {\em primitive polynomials}.
 
 %--------------------------------------
 \begin{example}
-\footnote{\citerpp{wicker}{465}{475}}
+\footnote{
+  \citePpu{hansen1992}{s47}{https://www.ams.org/journals/mcom/1992-59-200/S0025-5718-1992-1134730-7/S0025-5718-1992-1134730-7.pdf},
+  \citerppg{wicker}{465}{475}{0132008092}
+  }
 %--------------------------------------
 Some examples of primitive polynomials over $GF(2)$ are
-\exbox{\begin{tabular}{cl}
-   order & primitive polynomial \\
-   \hline
-    2 & $\fp(x) = x^2 + x + 1 $ \\
-    3 & $\fp(x) = x^3 + x + 1 $ \\
-    4 & $\fp(x) = x^4 + x + 1 $ \\
-    5 & $\fp(x) = x^5 + x^2 + 1 $ \\
-    5 & $\fp(x) = x^5 + x^4 + x^2 + x + 1 $ \\
-   16 & $\fp(x) = x^{16} + x^{15} + x^{13} + x^4 + 1 $\\
-   31 & $\fp(x) = x^{31} + x^{28} + 1 $
-\end{tabular}}
+\exbox{\begin{array}{cl|cl}
+   \text{order} & \text{primitive polynomial} & \text{order} & \text{primitive polynomial}
+   \\\hline
+      2 & \fp(x) = x^2    + x      + 1  &  5 & \fp(x) = x^5    + x^4    + x^2 + x + 1     
+   \\ 3 & \fp(x) = x^3    + x      + 1  & 16 & \fp(x) = x^{16} + x^{15} + x^{13} + x^4 + 1
+   \\ 4 & \fp(x) = x^4    + x      + 1  & 31 & \fp(x) = x^{31} + x^{28} + 1               
+   \\ 5 & \fp(x) = x^5    + x^2    + 1  &
+\end{array}}
 \end{example}
 
 An m-sequence is the remainder when dividing any non-zero polynomial by a primitive
