--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -374,8 +374,10 @@
 \newcommand{\citePuc}  [3]{\citePbullet\;\cite{#1} \lcomdelim\url{#2}\rcomdelim \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one comment
 \newcommand{\citePpc}  [3]{\citePbullet\;\cite{#1} page~#2 \lcomdelim#3\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citePppc} [4]{\citePbullet\;\cite{#1} pages #2--#3 \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citePpu}  [3]{\citePbullet\;\cite{#1} page~#2 \lcomdelim\url{#3}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
-\newcommand{\citePppu} [4]{\citePbullet\;\cite{#1} pages #2--#3 \lcomdelim\url{#4}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+%\newcommand{\citePpu}  [3]{\citePbullet\;\cite{#1} page~#2 \lcomdelim\url{#3}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citePpu}  [3]{\citePbullet\;\cite{#1} \href{#3}{page~#2}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+%\newcommand{\citePppu} [4]{\citePbullet\;\cite{#1} pages #2--#3 \lcomdelim\url{#4}\rcomdelim\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
+\newcommand{\citePppu} [4]{\citePbullet\;\cite{#1} \href{#4}{pages #2--#3}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citePpg}  [3]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citePpgc} [4]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citePg}   [2]{\citePbullet\;\href{http://books.google.com/books?vid=ISBN#2}{\cite{#1}}} % citation with google book search link to page
