--- a/common/bib/algebra.bib
+++ b/common/bib/algebra.bib
@@ -52,7 +52,7 @@
   year         = {1779},
   pages        = {471},
   language     = {French},
-  url          = {http://books.google.com.tw/books?id=RDEVAAAAQAAJ},
+  url          = {http://books.google.com/books?id=RDEVAAAAQAAJ},
   note         = {(General Theory of Algebraic Equations)},
   }
   
@@ -393,6 +393,18 @@
   url          = {http://www.archive.org/details/higheralgebraas00kniggoog},
   pages        = {593},
   lccn         = {43008049},
+  }
+
+@article{hansen1992,
+  author       = {Tom Hansen and Gary L. Mullen},
+  title        = {Supplement to Primitive Polynomials over Finite Fields},
+  journal      = {Mathematics of Computation},
+  volume       = {59},
+  number       = {200},
+  year         = {1992},
+  month        = {October},
+  pages        = {s47--s50},
+  url          = {https://www.ams.org/journals/mcom/1992-59-200/S0025-5718-1992-1134730-7/S0025-5718-1992-1134730-7.pdf},
   }
 
 @book{hazewinkel2000,
@@ -811,7 +823,7 @@
   year         = {1995},
   isbn         = {0-13-200809-2},
   oclc         = {30074481},
-  urlg         = {http://books.google.com.tw/books?vid=ISBN0132008092},
+  urlg         = {http://books.google.com/books?vid=ISBN0132008092},
   urla         = {http://people.ece.cornell.edu/wicker/},
   urlb         = {http://www.amazon.com/dp/0132008092/},
   url          = {http://www.worldcat.org/isbn/0132008092},
