--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -5898,6 +5898,18 @@
   url          = {http://integral-table.com/downloads/integral-table.pdf},
   }
 
+@book{schatzman2002,
+  isbn         = {9780198508526},
+  title        = {Numerical Analysis: A Mathematical Introduction},
+  author       = {Schatzman, Michelle},
+  translator   = {John Taylor},
+  url          = {https://books.google.com/books?id=3SuNiR1hzxUC},
+  year         = {2002},
+  publisher    = {Clarendon Press},
+  pages        = {496},
+  language     = {English},
+  }
+
 @book{shizgal2015,
   isbn10       = {9401794545},
   url          = {http://books.google.com/books?vid=ISBN9401794545},
