--- a/common/convolution.tex
+++ b/common/convolution.tex
@@ -35,7 +35,8 @@ Let $\spLLRBu$ be the space of all \structe{Lebesgue square-integrable functions
 %--------------------------------------
 \begin{theorem}
 \footnote{
-  \citerppg{bachman2002}{268}{270}{9780387988993}
+  \citerppg{bachman2002}{268}{270}{9780387988993},
+  \citerpgc{schatzman2002}{147}{9780198508526}{7.2.1 Convolution}
   }
 \label{thm:conv_algebra}
 %--------------------------------------
