opLT moment properties

--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -310,12 +310,13 @@
   }
 
 @book{goswami,
+  isbn         = {9780471197485},
+  isbn10       = {0471197483},
   author       = {Jaideva C. Goswami and Andrew K. Chan},
   title        = {Fundamentals of Wavelets; Theory, Algorithms, and Applications},
   shorttitle   = {Fundamentals of Wavelets\ldots},
   publisher    = {John Wiley \& Sons, Inc.},
   year         = {1999},
-  isbn         = {0-471-19748-3},
   url          = {http://vadkudr.boom.ru/Collection/fundwave_contents.html},
   urlg         = {http://books.google.com/books?vid=ISBN0471197483},
   urlw         = {http://www.worldcat.org/isbn/0471197483},
