--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -1489,12 +1489,13 @@ Let $\fM_n$ be the \fncte{$n$th moment} \xref{def:moment} of a function $\ff(x)$
 \begin{enumerate}
   \item Proof for $(\implies)$ case:
     \begin{align*}
-      0 &= \fM_n
+      0 &= (-1)^n\cdot0
+      \\&= (-1)^n\fM_n
         && \text{by left hypothesis}
-      \\&= \int_\R x^n \ff(x) \dx
-      \\&= \brs{(-1)^n \opddsn\opLT\ff}_{s=0}
+      \\&= (-1)^n\int_\R x^n \ff(x) \dx
+      \\&= (-1)^n\brs{(-1)^n \opddsn\opLT\ff}_{s=0}
         && \text{by \prefp{thm:opLT_moment}}
-      \\&\implies \brs{\opddsn\opLT\ff}_{s=0} =0
+      \\&= \brs{\opddsn\opLT\ff}_{s=0}
     \end{align*}
 
   \item Proof for $(\impliedby)$ case:
