opZT convolution material moved from dsp.tex to convolution.tex

--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -1136,9 +1136,9 @@ then so is $\frac{1}{\sigma^\ast}$ because
    \label{fig:zeros_cpairs}
    }
 \end{figure}
-\prefp{thm:zeros_cpairs} (next) states that the roots of real polynomials
-occur in complex conjugate pairs.
-This is illustrated in Figure~\ref{fig:zeros_cpairs}.
+\pref{thm:zeros_cpairs} (next) states that the roots of real polynomials
+occur in complex conjugate pairs;
+this is illustrated in \prefpp{fig:zeros_cpairs}.
 %--------------------------------------
 \begin{theorem}
 \label{thm:zeros_cpairs}
@@ -1315,6 +1315,8 @@ Let $\fieldF$ be a \structe{field}.
 
 %--------------------------------------
 \begin{definition}
+\label{def:zero}
+\label{def:pole}
 %--------------------------------------
 \defboxt{
   The \hid{zeros} of a rational function $H(x)=\frac{B(x)}{A(x)}$
