--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -8,142 +8,16 @@
 \label{app:dsp}
 \label{app:ztrans}
 %======================================
-%A digital filter is an operator on a sequence
-%For a wide class of digital filters, this operator is linear.
-%This operation can often be more clearly
-%understood by the use of a special transform called the {\em Z-transform} (\prefp{def:opZ}).
-%The Z-transform represents linear filters by ratios of polynomials
-%(a polynomial divided by a polynomial) in a free variable $z$.
-%The roots of the numerator polynomial are called \structe{zeros}.
-%The roots of the denominator polynomial are called \structe{poles}.
-%The location in the $z$-plane of these poles and zeros
-%determine the behavior of the filter operation.
-%======================================
-\section{Convolution operator}
-%======================================
-\ifdochasnot{seq}{
-%--------------------------------------
-\begin{definition}
-\label{def:sequence}
-\label{def:seq}
-\footnote{
-  \citerp{bromwich1908}{1},
-  \citerpgc{thomson2008}{23}{143484367X}{Definition 2.1},
-  \citerpg{joshi1997}{31}{8122408265}
-  }
-\label{def:tuple}
-%--------------------------------------
-Let $\clFyx$ be the set of all functions from a set $\setY$ to a set $\setX$.
-Let $\Z$ be the set of integers.
-\defbox{\begin{array}{l}
-  \text{A function $\ff$ in $\clFyx$ is a \fnctd{sequence} over $\setX$ if $\setY=\Z$.}\\
-  \text{A sequence may be denoted in the form $\ds\seqxZ{x_n}$ or simply as $\ds\seqn{x_n}$.}\\
-  %\text{A function $\ff$ in $\clFyx$ is an \fnctd{n-tuple} over $\setX$ if $\setY=\setn{1,2,\ldots,\xN}$.}\\
-  %\text{An n-tuple may be denoted in the form $\ds\tuplexn{x_n}$ or simply as $\ds\tuplen{x_n}$.}
-\end{array}}
-\end{definition}
-  }
-
-%--------------------------------------
-\begin{definition}
-\footnote{
-  \citerpgc{kubrusly2011}{347}{0817649972}{Example 5.K}
-  }
-\label{def:spllR}
-\label{def:spllF}
-%--------------------------------------
-Let $\fieldF$ be a \structe{field} \xref{def:field}.
-\defboxt{
-  The \structd{space of all absolutely square summable sequences} $\spllF$ over $\F$ is defined as
-  \\\indentx$\ds\spllF\eqd\set{\seqxZ{x_n}}{\sum_{n\in\Z}\abs{x_n}^2 < \infty}$
-  }
-\end{definition}
-
-The space $\spllR$ is an example of a \structe{separable Hilbert space}.
-In fact, $\spllR$ is the \emph{only} separable Hilbert space in the sense that all separable Hilbert spaces
-are isomorphically equivalent.
-For example, $\spllR$ is isomorphic to $\spLLR$, the \structe{space of all absolutely square Lebesgue integrable functions}.
-%That is, their topological structure is the same.
-%Differences occur in the nature of operators on the spaces.
-
-%--------------------------------------
-\begin{definition}
-\label{def:dsp_conv}
-\label{def:convd}
-\index{convolution}
-%--------------------------------------
-%Let $\seq{x_n}{n\in\Z}$ and $\seq{y_n}{n\in\Z}$ be sequences \xref{def:seq} in the space $\spllR$ \xref{def:spllR}.
-\defbox{\begin{array}{M}
-  The \opd{convolution} operation $\hxs{\convd}$ is defined as
-  \\\indentx
-  $\ds{\seqn{x_n}\convd\seqn{y_n}} \eqd \seq{\sum_{m\in\Z} x_{m} y_{n-m}}{n\in\Z}\qquad\scy\forall\seqxZ{x_n},\seqxZ{y_n}\in\spllR$
-\end{array}}
-\end{definition}
-
-%--------------------------------------
-\begin{proposition}
-%--------------------------------------
-Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
-\propbox{
-  \seqn{x_n}\convd\seqn{y_n} = \seqn{y_n}\convd\seqn{x_n}
-  \qquad{\scy\forall\seqxZ{x_n},\seqxZ{y_n}\in\spllR}
-  \qquad\text{($\convd$ is \prope{commutative})}
-  }
-\end{proposition}
-\begin{proof}
-\begin{align*}
-  [x\convd y](n)
-    &\eqd \sum_{m\in\Z} x_m y_{n-m}
-    &&    \text{by \prefp{def:dsp_conv}}
-  \\&=    \sum_{k\in\Z} x_{n-k} y(k)
-    &&    \text{where $k\eqd n-m$ $\implies$ $m=n-k$}
-  \\&=    \sum_{k\in\Z} x_{n-k} y(k)
-    &&    \text{by \prope{commutativity} of addition}
-  \\&=    \sum_{m\in\Z} x_{n-m} y_m
-    &&    \text{by change of variables}
-  \\&=    \sum_{m\in\Z} y_m x_{n-m}
-    &&    \text{by \prop{commutative} property of the field over $\C$}
-  \\&\eqd \brp{y\convd x}_n
-    &&    \text{by \prefp{def:dsp_conv}}
-\end{align*}
-\end{proof}
-
-%--------------------------------------
-\begin{proposition}
-\label{prop:conv_knk}
-%--------------------------------------
-Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
-Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR}.
-\propbox{
-  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-      (A).&\fx(n) &\in& \spllR & and
-    \\(B).&\fy(n) &\in& \spllR
-  \end{array}}
-  \implies
-  \brb{\begin{array}{>{\ds}rc>{\ds}l}
-     \sum_{k\in\Z} \fx[k]\fy[n+k] &=& \fx[-n]\convd\fy(n)
-  \end{array}}
-  }
-\end{proposition}
-\begin{proof}
-\begin{align*}
-  \sum_{k\in\Z} \fx[k]\fy[n+k]
-    &= \sum_{-p\in\Z} \fx[-p]\fy[n-p]
-    && \text{where $p\eqd -k$}
-    && \text{$\implies$ $k=-p$}
-  \\&= \sum_{p\in\Z} \fx[-p]\fy[n-p]
-    && \text{by \prope{absolutely summable} hypothesis}
-    && \text{\xref{def:spllR}}
-  \\&= \sum_{p\in\Z} \fx'[p]\fy[n-p]
-    && \text{where $\fx'[n] \eqd\fx[-n]$}
-    && \text{$\implies$ $\fx[-n]=\fx'[n]$}
-  \\&\eqd \fx'[n]\convd\fy[n]
-    && \text{by definition of \ope{convolution} $\convd$}
-    && \text{\xref{def:convd}}
-  \\&\eqd \fx[-n]\convd\fy[n]
-    && \text{by definition of $\fx'[n]$}
-\end{align*}
-\end{proof}
+A digital filter is an operator on a sequence
+For a wide class of digital filters, this operator is linear.
+This operation can often be more clearly
+understood by the use of a special transform called the {\em Z-transform} \xref{def:opZ}.
+The Z-transform represents linear filters by ratios of polynomials
+(a polynomial divided by a polynomial) in a free variable $z$.
+The roots of the numerator polynomial are called \structe{zeros};
+the roots of the denominator polynomial are called \structe{poles} \xref{def:pole}.
+The location in the $z$-plane of these poles and zeros
+determine the behavior of the filter operation.
 
 %======================================
 \section{Z-transform}
