opZT convolution commutative property proof

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -759,6 +759,7 @@
 \newcommand{\seqnY}[1]{\seq{#1}{n\in\setY}}
 \newcommand{\seqnD}[1]{\seq{#1}{n\in\Dom}}
 \newcommand{\seqnZ}[1]{\seq{#1}{n\in\Z}}
+\newcommand{\seqmZ}[1]{\seq{#1}{m\in\Z}}
 \newcommand{\seqkZ}[1]{\seq{#1}{k\in\Z}}
 \newcommand{\seqjZ}[1]{\seq{#1}{j\in\Z}}
 \newcommand{\seqxZp}[1]{\seq{#1}{n\in\Zp}}
