opZT convolution properties proofs

--- a/common/convolution.tex
+++ b/common/convolution.tex
@@ -206,59 +206,59 @@ Let $\conv$ be the discrete \ope{convolution} operatation \xref{def:convd}.
     && \text{$\implies$ $n=m-k$}
   \\&= \seqmZ{\sum_{-k=-\infty}^{-k=\infty}\seqn{y_k} \seqn{x_{m-k}}}
   \\&= \seqmZ{\sum_{k=-\infty}^{k=\infty}\seqn{y_k} \seqn{x_{m-k}}}
-  \\&\eqd \seqmZ{\brs{\seqn{y_n}\conv\seqn{x_n}}}
+  \\&\eqd \seqmZ{\seqn{y_n}\conv\seqn{x_n}}
+    && \text{by definition of $\conv$}
+    && \text{\xref{def:convd}}
+\end{align*}
+\newpage
+\begin{align*}
+  &\seqn{x_n}\conv\seqmZ{\seqn{y_n}\conv\seqn{z_n}}
+  \\&\eqd \seqn{x_n}\conv\seqmZ{\sum_{n\in\Z} \seqn{y_n}\seqn{z_{m-n}}}
+    && \text{by definition of $\conv$}
+    && \text{\xref{def:convd}}
+  \\&\eqd \seqkZ{\sum_{k\in\Z} \seqn{x_k} \seqmZ{\sum_{n\in\Z} \seqn{y_n} \seqn{z_{m-k-n}}}}
+    && \text{by definition of $\conv$}
+    && \text{\xref{def:convd}}
+  \\&= \seqkZ{\sum_{k\in\Z} \seqn{x_k} \seqmZ{\sum_{p-k\in\Z} \seqn{y_{p-k}} \seqn{z_{m-p}}}}
+    && \text{where $p\eqd k+n$}
+    && \text{$\implies$ $n=p-k$}
+  \\&= \seqn{\sum_{k\in\Z} \sum_{p-k\in\Z} \seqn{x_k} \seqn{y_{p-k}} \seqn{z_{m-p}}}
+  \\&= \seqn{\sum_{p\in\Z} \sum_{k\in\Z} \seqn{x_k} \seqn{y_{p-k}} \seqn{z_{m-p}}}
+  \\&= {\sum_{p\in\Z} \seqn{\seqn{x_k}\conv\seqn{y_k}}_p \seqn{z_{m-p}}}
+    && \text{by definition of $\conv$}
+    && \text{\xref{def:convd}}
+  \\&= \seqmZ{\seqn{\seqn{x_k}\conv\seqn{y_k}}_p \conv\seqn{z_{m-p}}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
 \end{align*}
 
 \begin{align*}
-  \seqn{x_n}\conv\brp{\seqn{y_n}\conv\seqn{z_n}}
-    &\eqd \seqn{x_n}\conv\sum_{n\in\Z} \seqn{y_n}(n)\seqn{z_n}(x-n)
-    && \text{by definition of $\conv$}
-    && \text{\xref{def:convd}}
-  \\&\eqd \sum_{m\in\Z} \seqn{x_n}(m)\sum_{n\in\Z} \seqn{y_n}(n)\seqn{z_n}(x-m-n)
-    && \text{by definition of $\conv$}
-    && \text{\xref{def:convd}}
-  \\&= \sum_{m\in\Z} \sum_{(k-m)\in\Z} \seqn{x_n}(m)\seqn{y_n}(k-m)\seqn{z_n}(x-w)
-    && \text{where $w\eqd u+v$}
-    && \text{$\implies$ $n=w-m$}
-  \\&= \sum_{w\in\Z}
-       \mcom{\brs{\sum_{m\in\Z} \seqn{x_n}(m)\seqn{y_n}(k-m) }}{function of $w$}
-       \seqn{z_n}(x-w)
-  \\&\eqd \brs{\sum_{m\in\Z} \seqn{x_n}(m)\seqn{y_n}(k-m) } \conv\seqn{z_n}
-    && \text{by definition of $\conv$}
-    && \text{\xref{def:convd}}
-  \\&\eqd \brs{\seqn{x_n}\conv\seqn{y_n}} \conv\seqn{z_n}
-    && \text{by definition of $\conv$}
-    && \text{\xref{def:convd}}
-  \\
-  \\
   \brs{\alpha\seqn{x_n}}\conv\seqn{y_n}
-    &\eqd \sum_\Z \brs{\alpha\seqn{x_n}(n)}\seqn{y_n}(x-n)
+    &\eqd \sum_{n\in\Z} \brs{\alpha\seqn{x_n}}\seqn{y_{m-n}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
-  \\&= \alpha\sum_\Z \brs{\alpha\seqn{x_n}(n)}\seqn{y_n}(x-n)
-    && \mathrlap{\text{by \prope{homogeneous} property of $\sum\dt$ operator}}
+  \\&= \alpha\sum_{n\in\Z} \brs{\alpha\seqn{x_n}}\seqn{y_{m-n}}
+    && \mathrlap{\text{by \prope{homogeneous} property of $\sum$ operator}}
   \\&= \boxed{\alpha\brs{\seqn{x_n}\conv\seqn{y_n}}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
-  \\&\eqd \alpha\brs{\sum_\Z \seqn{x_n}(n)\seqn{y_n}(x-n)  }
+  \\&\eqd \alpha\brs{\sum_{n\in\Z} \seqn{x_n}\seqn{y_{m-n}}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
-  \\&\eqd \sum_\Z \seqn{x_n}(n) \brs{\alpha\seqn{y_n}(x-n)}
-    && \mathrlap{\text{by \prope{homogeneous} property of $\sum\dt$ operator}}
+  \\&\eqd \sum_{n\in\Z} \seqn{x_n} \brs{\alpha\seqn{y_{m-n}}}
+    && \mathrlap{\text{by \prope{homogeneous} property of $\sum$ operator}}
   \\&\eqd \boxed{\seqn{x_n}\conv\brs{\alpha\seqn{y_n}}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
   \\
   \\
   \seqn{x_n}\conv\brp{\seqn{y_n}+\seqn{z_n}}
-    &\eqd \sum_{n\in\Z} \seqn{x_n}(n)\brs{\seqn{y_n}(x-n)+\seqn{z_n}(x-n)}
+    &\eqd \sum_{n\in\Z} \seqn{x_n}\brs{\seqn{y_{m-n}}+\seqn{z_{m-n}}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
-  \\&= \sum_{n\in\Z} \seqn{x_n}(n)\seqn{y_n}(x-n)
-     + \sum_{n\in\Z} \seqn{z_n}(n)\seqn{y_n}(x-n)
-    && \mathrlap{\text{by \prope{additive} property of $\sum\dt$ operator}}
+  \\&= \sum_{n\in\Z} \seqn{x_n}\seqn{y_{m-n}}
+     + \sum_{n\in\Z} \seqn{z_n}\seqn{y_{m-n}}
+    && \mathrlap{\text{by \prope{additive} property of $\sum$ operator}}
   \\&= \brp{\seqn{x_n}\conv\seqn{y_n}} + \brp{\seqn{x_n}\conv\seqn{z_n}}
     && \text{by definition of $\conv$}
     && \text{\xref{def:convd}}
