--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -1685,6 +1685,18 @@
   pages        = {387+xviii},
   }
 
+@book{dimovski2012,
+  isbn         = {9789400905276},
+  isbn10       = {9400905270},
+  title        = {Convolutional Calculus},
+  volume       = {43},
+  series       = {Mathematics and its Applications},
+  author       = {Ivan H. Dimovski},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2012},
+  pages        = {208},
+  }
+
 @article{dirichlet1829,
   authorx      = {Johann Dirichlet},
   author       = {Johann Peter Gustav Lejeune Dirichlet},
@@ -1751,6 +1763,17 @@
   publisher    = {Marcel Dekker Inc., New York},
   }
 
+@book{doetsch1958,
+  author       = {Gustav Doetsch},
+  title        = {Einf/:uhrung in Theorie und Anwendung der Laplace-Transformation},
+  year         = {1958},
+  volume       = {24},
+  series       = {Mathematische Reihe},
+  publisher    = {Birkh/:auser Verlag Basel Und Stuttgart},
+  url          = {https://archive.org/details/einfuhrungintheo0000doet/mode/2up},
+  language     = {German},
+  }
+
 @techreport{dominguez2010,
   author       = {J. Alejandro Dominguez-Torres},
   year         = {2010},
@@ -1769,7 +1792,8 @@
   month        = {January/February},
   title        = {A History of the Convolution Operation},
   journal      = {IEEE Pulse, Retroscope},
-  url          = {http://pulse.embs.org/january-2015/history-convolution-operation/},
+  url          = {https://www.embs.org/pulse/articles/history-convolution-operation/},
+  publisher    = {IEEE Engineering in Medicine \& Biology Society},
   }
 
 @incollection{drljevic1989,
