--- a/common/convolution.tex
+++ b/common/convolution.tex
@@ -310,6 +310,9 @@ Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR
 \section{References}
 %======================================
 \begin{enumerate}
-  \item History of convolution: \url{https://www.embs.org/pulse/articles/history-convolution-operation/}
+  \item History of convolution: \citeP{dominguez2015}
+  \item \citer{doetsch1958}
+  \item \citeP{dominguez2010}
+  \item \citer{dimovski2012} %{9789400905276},
 \end{enumerate}
 
