--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -380,8 +380,10 @@ True or False? This filter has no poles:
 %---------------------------------------
 \begin{figure}
   \centering
-  \includegraphics{../common/math/graphics/pdfs/pz_minphase.pdf}%
-  \includegraphics{../common/math/graphics/pdfs/pz_realcoefs_11.pdf}
+  \begin{tabular}{cc}
+    \includegraphics{../common/math/graphics/pdfs/pz_minphase.pdf}
+   &\includegraphics{../common/math/graphics/pdfs/pz_realcoefs_11.pdf}
+  \end{tabular}
 \caption{Conjugate pair structure yielding real coefficients\label{fig:realcoefs}}
 \end{figure}
 
