--- a/common/frames.tex
+++ b/common/frames.tex
@@ -683,7 +683,7 @@ Let $\setxn{\vx_n\in\setX}$ be a set of vectors in an \structe{inner product spa
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item Proof using \thme{Pythagorean theorem} \ifxref{vsinprod}{thm:pythag}:
+  \item Proof using \thme{Pythagorean theorem}\ifsxref{vsinprod}{thm:pythag}:
     \\Let $\seqxZp{\alpha_n}$ be a sequence with at least one nonzero element.
     \\\begin{align*}
         \norm{\sum_{n=1}^\xN \alpha_{n} \vx_n}^2
