--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -1376,9 +1376,8 @@ Let $A$, $B$, $C$, and $D$ be defined as in \prefpp{cor:opLT_linear}.
 %---------------------------------------
 Let $\opLT$ be the \ope{Laplace Transform} operator \xref{def:opLT}.
 \thmbox{\begin{array}{>{\ds}rc>{\ds}l}
-     \brb{\opLT \brs{\ddt \fg(x)}} &=& s \brs{\opLT\fg}(s)+ \lim_{x\to\infty}\brs{e^{-sx}\fg(x) -  e^{sx}\fg(-x)}
-    \\
-    \opLT \int_{u=-\infty}^{u=x} \fg(u) \du &=& \frac{1}{s} \brs{\opLT\fg}(s)
+    \opLT \brs{\ddx \fg(x)                      }(s) &=& s           \brs{\opLT\fg}(s) + \lim_{x\to\infty}\brs{e^{-sx}\fg(x) -  e^{sx}\fg(-x)}
+  \\\opLT \brs{\int_{u=-\infty}^{u=x} \fg(u) \du}(s) &=& \frac{1}{s} \brs{\opLT\fg}(s)
 \end{array}}
 \end{theorem}
 \begin{proof}
