taylor. wave equation / vibrating string equation reference

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -5972,6 +5972,20 @@
   pages        = {668},
   }
 
+@journal{smith1955,
+  title        = {Stress-Strain Relationships in Yarns Subjected to Rapid Impact Loading: 3. Effect of Wave Propagation},
+  journal      = {Journal of Research of the National Bureau of Standards},
+  author       = {Jack C. Smith and Frank L. McCrackin and Herbert F. Schiefer},
+  year         = {1955},
+  month        = {July},
+  volume       = {55},
+  number       = {1},
+  pages        = {19--28},
+  publisher    = {U.S. Government Printing Office},
+  url          = {https://books.google.com/books?id=q9Xbni-q8IMC&pg=PA19},
+  note         = {Research Paper 2601},
+  }
+
 @book{sohrab2003,
   author       = {Houshang H. Sohrab},
   title        = {Basic Real Analysis},
