--- a/common/dimensionality_reduction.tex
+++ b/common/dimensionality_reduction.tex
@@ -62,7 +62,7 @@ A very common algorithm for dimensionality reduction is %the following:
           \citeP{eckart1936},
           \citerppc{kendall1968}{10}{36}{``2. Component Analysis"},
           \citeP{jeffers1967},
-          \citerc{jolliffe2013}{9781475719048}
+          \citerg{jolliffe2013}{9781475719048}
           }
 %\end{listi}
 
