--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -380,6 +380,8 @@
 \newcommand{\citePppu} [4]{\citePbullet\;\cite{#1} \href{#4}{pages #2--#3}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citePpg}  [3]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citePpgc} [4]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
+\newcommand{\citePpuc} [4]{\citePbullet\;\cite{#1} \href{#3}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}}
+\newcommand{\citePpGc} [4]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?id=#3\&pg=PA#2}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}}
 \newcommand{\citePg}   [2]{\citePbullet\;\href{http://books.google.com/books?vid=ISBN#2}{\cite{#1}}} % citation with google book search link to page
 \newcommand{\citePgc}  [3]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#2}{\lcomdelim#3\rcomdelim}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citePppg} [4]{\citePbullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
