--- a/common/taylor.tex
+++ b/common/taylor.tex
@@ -13,8 +13,9 @@ For modeling real-world processes above the quantum level, measurements are \pro
 the first derivative of a function over time representing the measurement \prope{exists}.
 
 But even for ``simple" physical systems, it is not just the first derivative that matters.
-For example, the classical ``vibrating string" vertical displacement $\fu(x,t)$ wave equation can be described as
-        \\\indentx$\ds\ppderiv{u}{x^2} - \frac{1}{c^2}\ppderiv{u}{t^2} = 0$
+For example, the classical ``vibrating string" vertical displacement $\fy(x,t)$ wave equation can be described as\footnotemark
+        \\\indentx$\ds\brs{\ppderiv{ }{x^2}}\fy(x,t) - c^2\brs{\ppderiv{ }{t^2}}\fy(x,t) = 0$
+\footnotetext{\citePpGc{smith1955}{20}{q9Xbni-q8IMC}{``when Hooke's law applies"}}
 
 \begin{figure}
   \centering
@@ -25,7 +26,7 @@ For example, the classical ``vibrating string" vertical displacement $\fu(x,t)$ 
   \caption{Sunspot and earthquake measurements\label{fig:sunspot}}
 \end{figure}
 Not only do physical systems demonstrate heavy dependence on the derivatives of their measurement functions,
-but also commonly exhibit \prope{oscillation}, as demonstrated by sunspot activity over the last 300 years or
+but also commonly exhibit \prope{oscillation}, as demonstrated by sunspot activity over the last 300 years, and
 earthquake activity \xref{fig:sunspot}.
 
 In fact, derivatives and oscillations are fundamentally linked
