'This is all we can do for you now.' quote

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -175,6 +175,18 @@
   urla         = {http://www.amazon.com/dp/0123739047},
   }
 
+@book{bendiner1980,
+  isbn         = {9780399123726},
+  title        = {The Fall of Fortresses},
+  year         = {1980},
+  month        = {May 12},
+  author       = {Elmer Bendiner},
+  publisher    = {Penguin Adult HC/TR},
+  isbn10       = {0399123725},
+  pages        = {258},
+  url          = {https://books.google.com/books?id=sNBzAAAAIAAJ},
+  }
+
 @book{bogart2000,
   author       = {Kenneth P. Bogart},
   title        = {Introductory Combinatorics},
