--- a/common/quotepagepair.tex
+++ b/common/quotepagepair.tex
@@ -83,9 +83,20 @@
   %  image:  \url{http://www-history.mcs.st-andrews.ac.uk/PictDisplay/Russell.html}.
   %  }
 \vfill
-\hfill\includegraphics*[height=10mm]{../common/graphics/watercraft/ghind_djg_blue.eps}%
-%\includegraphics*[height=15mm]{../common/graphics/watercraft/ghindgray_djg.eps}%
-%\hspace{1pt}%
+\qboxns{Translated note written in Czech found in a World War II Nazi fired shell, one of eleven
+in the fuel tanks of the B-17 bomber ``Tondelayo", that somehow made it safely back to base
+instead of bursting into flames over Kassel, Germany---all the shells 
+being devoid of explosive charge.\footnotemark\hspace{1ex}
+In like manner, perhaps this text in some small way may help someone find success in accomplishing a task 
+with significant returns to the well-being of humanity.}
+{This is all we can do for you now.}
+%\footnotetext{
+%  \citerpg{Bendiner1980}{139}{9780399123726}
+%  \url{https://www.truthorfiction.com/fall-of-fortresses-bendiner/}
+%}
+\vfill
+\hfill\includegraphics*[height=10mm]{../common/graphics/watercraft/ghind_blue.pdf}%
+
 %---------------------------------------
 % page even: references to quotes and impages
 %---------------------------------------
@@ -93,7 +104,7 @@
 %\thispagestyle{empty}%
 \mbox{}%
 %\markboth{Quotes}{Quotes}
-\addtocounter{footnote}{-2}%
+\addtocounter{footnote}{-3}%
 \footnotetext{\begin{tabular}[t]{ll}% Housman quote
   quote: & \citerpc{housman1936}{64}{``Smooth Between Sea and Land"}, \citerc{hardy1940}{section 7}\\
   image: & \url{http://en.wikipedia.org/wiki/Image:Housman.jpg}
@@ -113,14 +124,9 @@
   quote: & \citerp{heijenoort}{127}\\
   image: & \url{http://www-history.mcs.st-andrews.ac.uk/PictDisplay/Russell.html}
   \end{tabular}}%
-%\vfill\includegraphics*[height=10mm]{../common/graphics/watercraft/ghind_djg_blue.eps}\hfill\mbox{}%
 
-
-
-
-
-
-
-
-
-
+\stepcounter{footnote}%
+\footnotetext{%"This is all we can do for you now." quote
+  \citerpg{Bendiner1980}{139}{9780399123726},
+  \url{https://www.truthorfiction.com/fall-of-fortresses-bendiner/}
+  }
