--- a/common/transop.tex
+++ b/common/transop.tex
@@ -47,10 +47,8 @@
 %
 
 %======================================
-\section{Families of Functions}
+\section{Definitions}
 %======================================
-This text is largely set in the space of
-\structe{Lebesgue square-integrable functions} $\spLLR$ \xref{def:spLLR}.
 The space $\spLLR$ is a subspace of the space $\hxs{\spRR}$, the set of all functions with \structe{domain}
 $\hxs{\R}$ (the set of real numbers) and \structe{range} $\R$.
 The space $\spRR$ is a subspace of the space $\hxs{\spCC}$, the set of all functions with \structe{domain}
@@ -100,12 +98,6 @@ Let $\setX$ be a set.
 \end{definition}
 }
 
-%=======================================
-\section{Definitions and algebraic properties}
-%=======================================
-Much of the wavelet theory developed in this text is constructed using the \opb{translation operator} $\opTrn$
-and the \opb{dilation operator} $\opDil$ (next).
-
 %---------------------------------------
 \begin{definition}
 \footnote{
@@ -145,6 +137,9 @@ Let $\opT$ and $\opD$ be defined as in \prefpp{def:opTD}.
 \end{array}}
 \end{example}
 
+%=======================================
+\section{Algebraic properties}
+%=======================================
 %---------------------------------------
 \begin{proposition}
 \label{prop:opT_periodic}
